[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "splayers"
version = "0.1.0"

[dependencies]
error-chain = "0.11"
more-asserts = "0.1"
tempdir = "0.3"
time = "0.1"
twoway = "0.1"
walkdir = "2"

#formats
ar = "0.4"
bzip2 = "0.3"
tar = "0.4"
xz2 = "0.1.4"
zip = "0.3"


[dev-dependencies.error-chain-for-dumb-ides]
git = "https://github.com/FauxFaux/error-chain-for-dumb-ides"

[dependencies.flate2]
version = "1"
default-features = false
features = ["rust_backend"]

